mlx/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlx-api
  namespace: kubeflow
  labels:
    service: mlx-api
    environment: dev
spec:
  selector:
    matchLabels:
       service: mlx-api
       environment: dev
  replicas: 1
  template:
    metadata:
      labels:
        service: mlx-api
        environment: dev
#        version: v0.1.0-rc1
        version: v0.1.23-dataset-run
    spec:
      serviceAccountName: mlx-api
      containers:
      - name: mlx-api-server
        image: docker.io/aipipeline/mlx-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /apis/v1alpha1/health_check?check_database=true&check_object_store=true
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 60
          failureThreshold: 3
