mlx/base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlx-ui
  namespace: kubeflow
  labels:
    service: mlx-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mlx-ui
  template:
    metadata:
      name: mlx-ui
      labels:
        service: mlx-ui
    spec:
      serviceAccountName: mlx-ui
      containers:
      - name: mlx-ui
        # You can use your own webapp image below
        image: aipipeline/mlx-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
