mlx/base/ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /os
    rewrite:
      uri: /os
    route:
    - destination:
        host: mlx-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
